# os

./: Cargo.toml  x86_64-halogenos.json
.cargo/: config.toml
boot/: Cargo.toml
boot/src/: main.rs
src/: allocator.rs  gdt.rs  interrupts.rs  lateinit.rs  lib.rs  logging.rs  main.rs  memory.rs  tty.rs
src/interrupt/: interrupts.rs  irq.rs  mod.rs
src/io/: logging.rs  mod.rs  serial.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
