[package]
name = "halogen-os"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["boot"]

[dependencies]
bootloader = "0.10.12"
raw-cpuid = "10.2.0"
x86_64 = "0.14.8"
printk = "0.2.4"
conquer-once = { version = "0.3.2", default-features = false }
log = "0.4.14"
linked_list_allocator = "0.9.1"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

[package.metadata.bootloader]
map-physical-memory = true
